scss footer - add missing css

--- a/style.scss
+++ b/style.scss
@@ -2083,6 +2083,7 @@ footer {
 
   .related-groups {
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: space-between;
 
