footer - fix palm width for RWD

--- a/style.scss
+++ b/style.scss
@@ -2049,7 +2049,7 @@ footer {
     display: flex;
     align-items: center;
     img {
-      width: 3vw;
+      width: 36px;
       padding-right: 10px;
     }
   }
